First draft of hotkeys in main window. Only changes in .designer sofar (menuStrip). Summary table available in help_en.html.
Layout follows these simple guidelines:
1) Project modification invocations by default use the CTRL modkey 
2) ...unless there is a preferred Windows standard heritage key, for example F2 = rename, DEL = delete).
3)View modifications (that change the GUI but not the project itself) by default use the ALT modkey.

The hotkey layout is going to need a major rework once play and record dialogs are dissolved etcetera, so we are not married to the current set. They will and should change during coming iterations.

--- a/Obi/Obi/help_en.html
+++ b/Obi/Obi/help_en.html
@@ -1,11 +1,114 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<title>Help</title>
-	</head>
-	<body>
-	    <h1>Help</h1>
-	    <p>Help goes here.</p>
-	</body>
+<head>
+<title>Obi Manual</title>
+<style type="text/css">
+
+</style>
+</head>
+
+<body>
+<h1>Obi Manual</h1>
+
+<h2 id="toc">Table of Contents</h2>
+
+<h2 id="intro">Obi - DAISY/NISO DTB Production Tool</h2>
+  <h3>What is Obi?</h3>
+  <h3>Obi Online - Community Help and Support</h3>
+
+<h2>Getting Started</h2>
+  <h3>Main Window Overview</h3>
+    <h4>The TOC View</h4>
+    <h4>The Strip View</h4>
+  <h3>Setting Preferences</h3>
+  <h3>Create a New Project</h3>
+  <h3>Record and Edit the Project</h3>
+  <h3>Save the Project</h3>
+  <h3>Please enjoy the DAISY/NIDO DTB</h3>
+    
+<h2>Obi Windows - details</h2>
+  <h3>Main Window</h3>
+    <h4>TOC View</h4>
+    <h4>Strip View</h4>
+    <h4>Record Dialog</h4>
+    <h4>Play Dialog</h4>
+    <h4>Split Dialog</h4>
+
+  <h3>Metadata Dialog</h3>
+
+  <h3>Preferences Dialog</h3>
+
+  <h3>User Profile Dialog</h3>
+
+<h2 id="gloss">Glossary of Terms</h2>
+<dl>
+  Block  
+  Phrase
+  Section  
+  Strip
+  XUK File Format
+</dl>
+
+<h2 id="kbd">Keyboard Shortcut Table</h2>
+<!--
+Project modification invocations by default use the CTRL modkey 
+(unless there is a preferred Windows standard heritage key, for example F2 = rename, DEL = delete).
+View modifications (that change the GUI but not the project itself) by default use the ALT modkey
+-->
+<table>
+  New Project				CTRL+N
+  Open Project				CTRL+O
+  Save Project				CTRL+S
+  Save Project as			CTRL+SHIFT+S
+  Close Project				CTRL+W
+  Exit					ALT+F4
+
+  Undo					CTRL+Z
+  Redo					CTRL+Y
+  Cut					CTRL+X
+  Copy 					CTRL+C
+  Paste					CTRL+V
+  Delete				Del
+   
+  Hide TOC View				ALT+T
+  Show TOC View				ALT+T
+  
+  Add section				CTRL+A
+  Add subsection			CTRL+B
+  Delete section			DEL
+  Rename section			F2
+  Move Section Up			CTRL+UP
+  Move Section Down			CTRL+DOWN
+  Move Section In			CTRL+RIGHT
+  Move Section Out			CTRL+LEFT
+
+  Show in Strip View			ALT+V
+  Show in TOC View			ALT+V
+  
+  Add strip				CTRL+A
+  Rename strip				SHIFT+F2 (because of selection ambivalence in strips)
+  Import audio file    			CTRL+I
+  Play audio block			ALT+Space (should be space alone)
+  Split audio block			CTRL+P
+  Merge with next audio block		CTRL+M
+  Delete audio block			DEL
+  Rename audio block			F2
+      
+  Open Record Dialog			ALT+R
+  
+  Open Help				F1
+  
+  Open Metadata dialog			ALT+M
+  
+  Open Audio Preferences		ALT+A
+   
+  Open Project Preferences		ALT+P
+  
+  Open User Profile Dialog		ALT+U
+  
+</table>  
+  
+
+</body>
 </html>
