--- a/trunk/Obi/Obi/help_en.html
+++ b/trunk/Obi/Obi/help_en.html
@@ -57,6 +57,13 @@ Project modification invocations by default use the CTRL modkey
 View modifications (that change the GUI but not the project itself) by default use the ALT modkey
 -->
 <table>
+  File Menu				ALT+F
+  Edit Menu				ALT+E
+  TOC Menu				ALT+C
+  Strips Menu				ALT+S
+  Tools Menu				ALT+T
+  Help Menu				ALT+H
+
   New Project				CTRL+N
   Open Project				CTRL+O
   Save Project				CTRL+S
@@ -88,12 +95,18 @@ View modifications (that change the GUI but not the project itself) by default u
   
   Add strip				CTRL+A
   Rename strip				SHIFT+F2 (because of selection ambivalence in strips)
+  Delete strip				SHIFT+Del
+  Move strip up				CTRL+SHIFT+Up
+  Move strip down			CTRL+SHIFT+Down
+    
   Import audio file    			CTRL+I
   Play audio block			ALT+Space (should be space alone)
   Split audio block			CTRL+P
   Merge with next audio block		CTRL+M
   Delete audio block			DEL
   Rename audio block			F2
+  Move audio block forward		CTRL+RIGHT
+  Move audio block backward		CTRL+LEFT
       
   Open Record Dialog			ALT+R
   
