--- a/trunk/Obi/Obi/help_en.html
+++ b/trunk/Obi/Obi/help_en.html
@@ -494,8 +494,8 @@
   Read more at the <a href="http://www.daisy.org/about_us/">daisy.org introduction area</a>.
   </dd>
   
-  <dt>Obird <img src="obird.ico" alt="obird logo"/> </dt>
-  <dd>Obird is the Obi mascot. The Obird logo consists of a picture of Obirds green head, where she is wearing a headset with a microphone. Although Obird is a Parakeet, she can narrate very well.</dd>
+  <dt>Obird <img src="images/obird32.png" alt="obird logo"/> </dt>
+  <dd>Obird is the Obi mascot. The Obird logo consists of a picture of Obird's green head, where she is wearing a headset with a microphone. Although Obird is a Parakeet, she can narrate very well.</dd>
     
   <dt>Phrase</dt>
   <dd>
