--- a/trunk/Obi/Obi/help_en.html
+++ b/trunk/Obi/Obi/help_en.html
@@ -21,8 +21,10 @@
   h3,h4 {margin-top: 2em}
   h5,h6 {margin-top: 1em}
   img { border: 0 }    
-obivisible {}
-wwwvisible {display: none;}
+
+.obivisible {}
+.wwwvisible {display: none;}
+
 </style>
 </head>
 
