--- a/trunk/Obi/Obi/help_en.html
+++ b/trunk/Obi/Obi/help_en.html
@@ -36,7 +36,7 @@
 		<img src="__$strRootHttpDir__images/ObiLogo.png" alt="The Obi logo"/>
 	</div>
 
-	<p>This is the user manual for <strong>Obi v0.5 (18th August 2006)</strong></p>
+	<p>This is the user manual for <strong>Obi v0.6 (31st October 2006)</strong></p>
 
 </div>
 
@@ -46,7 +46,7 @@
       <img style="width:128px;height:128px" alt="" src="images/obird256.png"/>
 </h1>
 
-<p>This is the manual for Obi v0.5 (18th August 2006.)</p>
+<p>This is the manual for Obi v0.6 (31st October 2006.)</p>
 
 
 <h2 id="toc">Obi Manual - Table of Contents</h2>
