Touched documentation a little bit to display images correctly.

--- a/Obi/Obi/help_en.html
+++ b/Obi/Obi/help_en.html
@@ -5,7 +5,7 @@
   <head>
     <title>Obi User Manual version 0.8.4.0</title>
     <style type="text/css">
-      body { color: black; background-color: white; font-family: sans-serif; margin: 3em; text-align: justify }
+      body { color: black; background-color: white; font-family: Helvetica, Arial, sans-serif; margin: 3em; text-align: justify }
       ul.toc { margin-left: 0em; padding-left:0em }
       ul.toc li, ul.toc li ul li { list-style-type: none}      
       .infobox { border: 1px solid rgb(25, 100, 25); background-color: rgb(210, 250, 210); padding: 1em; margin: 1em 0 }
@@ -30,7 +30,7 @@
 
     <div id="www_version" style="display: none;">
       <div style="float: right;">
-        <img src="__$strRootHttpDir__images/ObiLogo.png" alt="The Obi logo"/>
+        <img src="__$strRootHttpDir__images/obird_bobi.png" alt="The Obi logo"/>
       </div>
       <p>This is the user manual for <strong>Obi v0.8.4.0 (4th April 2007)</strong></p>
     </div>
